# Descargador-YT

./: .gitignore  angular.json  package-lock.json  package.json
.github/workflows/: release.yml
src/: index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: README.md
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: download.rs  metadata.rs  mod.rs  settings.rs
src-tauri/src/utils/: mod.rs  platform.rs  progress.rs
src/app/: app.component.css  app.component.html  app.component.ts  app.routes.ts
src/app/features/downloader/: downloader.component.css  downloader.component.html  downloader.component.ts  downloader.service.ts
src/app/features/history/: history.component.css  history.component.html  history.component.ts
src/app/features/settings/: settings.component.css  settings.component.html  settings.component.ts
src/app/models/: download.models.ts
