[package]
name = "yt-mp3-downloader"
version = "1.0.0"
description = "YouTube MP3 Downloader — Tauri 2.0"
edition = "2021"
rust-version = "1.77"

[[bin]]
name = "yt-mp3-downloader"
path = "src/main.rs"

[lib]
name = "yt_mp3_downloader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri              = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell  = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs     = "2"
tauri-plugin-opener = "2"

serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
tokio       = { version = "1", features = ["full"] }
reqwest     = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
anyhow      = "1"
thiserror   = "1"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid        = { version = "1", features = ["v4"] }
chrono      = { version = "0.4", features = ["serde"] }
regex       = "1"
dirs        = "5"
once_cell   = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level    = 3
lto          = true
codegen-units = 1
panic        = "abort"
strip        = true
